tests/ui/suggestions/suggest-closure-return-type-1.stderr
error[E0282]: type annotations needed for `[_; 0]`
  --> $DIR/suggest-closure-return-type-1.rs:4:18
   |
LL |     unbound_drop(|| -> _ { [] });
   |                  ^^^^^^^   -- type must be known at this point
   |
help: try giving this closure an explicit return type
   |
LL -     unbound_drop(|| -> _ { [] });
LL +     unbound_drop(|| -> [_; 0] { [] });
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
